remove mermaid force yarn

--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -21,11 +21,11 @@ jobs:
           node-version: 20
           cache: 'yarn'
 
-      - name: Clear Yarn cache
-        run: rm -rf node_modules && rm yarn.lock
+      # - name: Clear Yarn cache
+      #   run: rm -rf node_modules && rm yarn.lock
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --force
 
       - name: debug build
         run: |
@@ -59,11 +59,11 @@ jobs:
           node-version: 20
           cache: 'yarn'
 
-      - name: Clear Yarn cache
-        run: rm -rf node_modules && rm yarn.lock
+      # - name: Clear Yarn cache
+      #   run: rm -rf node_modules && rm yarn.lock
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --force
 
       - name: Decrypt keystore and Google Credential
         run: ./scripts/decrypt.sh
