--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -20,11 +20,11 @@ jobs:
           node-version: 20
           cache: 'yarn'
 
-      - name: Clear Yarn cache
-        run: rm -rf node_modules && rm yarn.lock
+      # - name: Clear Yarn cache
+      #   run: rm -rf node_modules && rm yarn.lock
 
       - name: install dependencies
-        run: yarn install
+        run: yarn install --force
 
       - name: execute tests
         run: yarn test
