--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -165,9 +165,6 @@
     "resolve": "1.22.10",
     "typescript": "5.0.4"
   },
-  "optionalDependencies": {
-    "@mermaid-js/mermaid-cli": "9.3.0"
-  },
   "engines": {
     "node": ">=18"
   },
@@ -202,5 +199,8 @@
       ]
     }
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "optionalDependencies": {
+    "@mermaid-js/mermaid-cli": "11.4.2"
+  }
 }
