--- a/.github/workflows/build_iOS.yml
+++ b/.github/workflows/build_iOS.yml
@@ -18,13 +18,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'yarn'
+          # cache: 'yarn'
 
-      # - name: Clear Yarn cache
-      #   run: rm -rf node_modules && rm yarn.lock
+      - name: Clear Yarn cache
+        run: yarn cache clean
 
       - name: Install dependencies
-        run: yarn install --force
+        run: yarn install
 
       - name: Install pod dependencies
         run: |
