--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -22,7 +22,7 @@ jobs:
           # cache: 'yarn'
 
       - name: Clear Yarn cache
-        run: yarn cache clean
+        run: rm yarn.lock
 
       - name: Install dependencies
         run: yarn install
@@ -60,7 +60,7 @@ jobs:
           # cache: 'yarn'
 
       - name: Clear Yarn cache
-        run: yarn cache clean
+        run: rm yarn.lock
 
       - name: Install dependencies
         run: yarn install
