--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -36,6 +36,8 @@
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.6",
     "@react-native-picker/picker": "2.11.0",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
+    "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
@@ -93,7 +95,6 @@
     "react-native-svg": "15.11.2",
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "10.2.0",
     "react-native-vision-camera": "^4.6.4",
     "react-redux": "7.2.8",
     "redux-mock-store": "1.5.5",
@@ -128,7 +129,6 @@
     "@types/qrcode": "1.5.5",
     "@types/ramda": "0.30.2",
     "@types/react": "^18.3.18",
-    "@types/react-native-vector-icons": "6.4.18",
     "@types/react-redux": "7.1.34",
     "@types/react-test-renderer": "^18.3.1",
     "@types/xml2js": "0.4.14",
