--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -109,7 +109,6 @@ android {
         testBuildType System.getProperty('testBuildType', 'debug')
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
-        // multiDexEnabled true
     }
     signingConfigs {
         debug {
@@ -138,10 +137,19 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
-            // applicationIdSuffix ".debug"
-            // versionNameSuffix '-DEBUG'
+            applicationIdSuffix ".debug"
+            versionNameSuffix '-DEBUG'
         }
-        
+
+        staging {
+            minifyEnabled enableProguardInReleaseBuilds
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            proguardFile "${rootProject.projectDir}/../node_modules/detox/android/detox/proguard-rules-app.pro"
+            matchingFallbacks = ['release']
+            signingConfig signingConfigs.staging
+            applicationIdSuffix ".staging"
+        }
+
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
