--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -13,19 +13,19 @@ jobs:
         working-directory: BrightID
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          # cache: 'yarn'
+          node-version: '20.x'
+          cache: 'yarn'
 
-      - name: Clear Yarn cache
-        run: yarn cache clean && rm yarn.lock $$ rm -rf node_modules
+      #- name: Clear Yarn cache
+      #  run: yarn cache clean && rm yarn.lock $$ rm -rf node_modules
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: debug build
         run: |
