--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn cache clean #&& rm yarn.lock $$ rm -rf node_modules
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile --network-concurrency=1
 
       - name: debug build
         run: |
@@ -63,7 +63,7 @@ jobs:
         run: yarn cache clean && rm yarn.lock $$ rm -rf node_modules
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile --network-concurrency=1
 
       - name: Decrypt keystore and Google Credential
         run: ./scripts/decrypt.sh
