--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -44,6 +44,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/lodash": "4.17.20",
     "apisauce": "3.1.0",
     "base64-js": "1.5.1",
     "buffer": "5.6.0",
@@ -60,7 +61,7 @@
     "js-sha256": "0.9.0",
     "jsbn": "1.1.0",
     "libphonenumber-js": "1.12.4",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.21",
     "moment": "2.30.1",
     "promise.any": "2.0.6",
     "prop-types": "15.8.1",
@@ -125,7 +126,6 @@
     "@types/crypto-js": "4.2.2",
     "@types/jest": "^29.5.14",
     "@types/jsbn": "1.2.33",
-    "@types/lodash": "4.17.15",
     "@types/qrcode": "1.5.5",
     "@types/ramda": "0.30.2",
     "@types/react": "^18.3.18",
