--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -94,7 +94,7 @@
     "react-native-screens": "4.9.1",
     "react-native-spinkit": "1.5.1",
     "react-native-svg": "15.11.2",
-    "react-native-tab-view": "2.15.2",
+    "react-native-tab-view": "^4.1.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.6.4",
     "react-redux": "7.2.8",
