--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -97,7 +97,7 @@
     "react-native-tab-view": "^4.1.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.6.4",
-    "react-redux": "7.2.8",
+    "react-redux": "^9.2.0",
     "redux-mock-store": "1.5.5",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.4.2",
@@ -128,7 +128,6 @@
     "@types/jsbn": "1.2.33",
     "@types/qrcode": "1.5.5",
     "@types/ramda": "0.30.2",
-    "@types/react": "^18.3.18",
     "@types/react-test-renderer": "^18.3.1",
     "@types/xml2js": "0.4.14",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
