--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -50,7 +50,7 @@
     "buffer": "5.6.0",
     "compare-versions": "6.1.1",
     "crypto-js": "3.3.0",
-    "detox": "20.33.0",
+    "detox": "^20.38.0",
     "ed2curve": "0.3.0",
     "emittery": "1.1.0",
     "events": "3.3.0",
