--- a/BrightID/ios/Podfile
+++ b/BrightID/ios/Podfile
@@ -5,7 +5,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+platform :ios, '12.0'
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
@@ -26,6 +26,8 @@ target 'BrightID' do
 
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
+    # Clean up broken symlinks that may interfere with rsync
+    `find #{installer.sandbox.root} -type l ! -exec test -e {} \\; -delete`
     react_native_post_install(
       installer,
       config[:reactNativePath],
