explicitly enabling hermes isn't needed

--- a/BrightID/ios/Podfile
+++ b/BrightID/ios/Podfile
@@ -20,8 +20,7 @@ target 'BrightID' do
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
-    :app_path => "#{Pod::Config.instance.installation_root}/..",
-    :hermes_enabled => true
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   post_install do |installer|
