--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BrightID",
-  "version": "5.0.0-[preview]",
+  "version": "5.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
