--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -33,7 +33,7 @@
     "@react-native-async-storage/async-storage": "2.1.1",
     "@react-native-clipboard/clipboard": "1.16.1",
     "@react-native-community/blur": "4.4.1",
-    "@react-native-community/checkbox": "0.5.17",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/slider": "4.5.6",
     "@react-native-picker/picker": "2.11.0",
     "@react-native-vector-icons/ionicons": "^12.3.0",
