--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "https://github.com/expo/react-native-action-sheet",
-    "@react-native-async-storage/async-storage": "2.1.1",
-    "@react-native-clipboard/clipboard": "1.16.1",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-clipboard/clipboard": "^1.16.0",
     "@react-native-community/blur": "4.4.1",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/slider": "4.5.6",
@@ -68,16 +68,16 @@
     "qrcode": "1.5.4",
     "ramda": "0.30.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "12.1.5",
-    "react-native": "0.77.1",
+    "react-native": "^0.77.0",
     "react-native-barcode-mask": "1.2.4",
     "react-native-blob-util": "^0.21.2",
     "react-native-contacts": "8.0.4",
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "5.1.0",
     "react-native-error-boundary": "1.2.9",
-    "react-native-gesture-handler": "2.24.0",
+    "react-native-gesture-handler": "^2.22.0",
     "react-native-image-crop-picker": "0.51.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-keychain": "9.2.3",
@@ -89,11 +89,11 @@
     "react-native-pager-view": "^6.7.0",
     "react-native-phone-number-input": "2.1.0",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "3.16.7",
-    "react-native-safe-area-context": "5.2.0",
-    "react-native-screens": "4.9.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.1",
     "react-native-tab-view": "^4.1.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.6.4",
@@ -113,12 +113,12 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/runtime": "^7.26.9",
     "@jest/globals": "^29.7.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.77.1",
+    "@react-native-community/cli": "^15.0.1",
+    "@react-native-community/cli-platform-android": "^15.0.1",
+    "@react-native-community/cli-platform-ios": "^15.0.1",
+    "@react-native/babel-preset": "^0.77.0",
     "@react-native/eslint-config": "0.77.1",
-    "@react-native/metro-config": "0.77.1",
+    "@react-native/metro-config": "^0.77.0",
     "@react-native/typescript-config": "0.77.1",
     "@rnx-kit/align-deps": "3.0.4",
     "@testing-library/jest-native": "5.4.3",
