--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -93,7 +93,7 @@
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "^15.11.1",
+    "react-native-svg": "~15.12.0",
     "react-native-tab-view": "^4.1.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.6.4",
