--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -89,7 +89,7 @@
     "react-native-pager-view": "^6.7.0",
     "react-native-phone-number-input": "2.1.0",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "~3.18.0",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-spinkit": "1.5.1",
