--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -80,7 +80,7 @@
     "react-native-gesture-handler": "^2.22.0",
     "react-native-image-crop-picker": "0.51.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
-    "react-native-keychain": "9.2.3",
+    "react-native-keychain": "^10.0.0",
     "react-native-localize": "2.2.4",
     "react-native-logs": "5.3.0",
     "react-native-modal-overlay": "1.3.1",
