--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -104,7 +104,7 @@
     "reselect": "4.1.7",
     "stream": "0.0.3",
     "timers": "0.1.1",
-    "tweetnacl": "1.0.1",
+    "tweetnacl": "github:RnbWd/tweetnacl-native",
     "xml2js": "0.4.23"
   },
   "devDependencies": {
