--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -112,6 +112,7 @@
     "@babel/plugin-syntax-export-default-from": "7.27.1",
     "@babel/preset-env": "7.28.3",
     "@babel/runtime": "7.28.4",
+    "@faker-js/faker": "9.9.0",
     "@jest/globals": "29.7.0",
     "@react-native-community/cli": "15.1.3",
     "@react-native-community/cli-platform-android": "15.1.3",
