--- a/BrightID/ios/Podfile
+++ b/BrightID/ios/Podfile
@@ -5,7 +5,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, '15.1'
+platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
@@ -20,14 +20,13 @@ target 'BrightID' do
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
-    :app_path => "#{Pod::Config.instance.installation_root}/..",
-    :hermes_enabled => false
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
+      # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     # Clean up broken symlinks that may interfere with rsync
-    `find #{installer.sandbox.root} -type l ! -exec test -e {} \\; -delete`
+    # `find #{installer.sandbox.root} -type l ! -exec test -e {} \\; -delete`
     react_native_post_install(
       installer,
       config[:reactNativePath],
