--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -15,7 +15,7 @@
     "test:ios": "detox test -c ios.sim.debug",
     "test": "jest",
     "lint": "eslint 'src' --quiet --fix",
-    "postinstall": "npx jetify && npx patch-package",
+    "postinstall": "npx patch-package",
     "test:watch": "npm test -- --watch",
     "updateSnap": "jest --updateSnapshot",
     "build:debug": "cd android && ./gradlew assembleDebug && cd ..",
@@ -34,25 +34,25 @@
     "@react-native-clipboard/clipboard": "1.16.3",
     "@react-native-community/blur": "4.4.1",
     "@react-native-community/checkbox": "0.5.20",
-    "@react-native-community/slider": "4.5.6",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-community/slider": "5.0.1",
+    "@react-native-picker/picker": "2.11.4",
     "@react-native-vector-icons/ionicons": "12.3.0",
     "@react-native-vector-icons/material-design-icons": "12.3.0",
+    "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/drawer": "6.7.2",
     "@react-navigation/elements": "1.3.31",
     "@react-navigation/native": "6.1.18",
     "@react-navigation/native-stack": "6.11.0",
     "@react-navigation/stack": "6.4.1",
     "@reduxjs/toolkit": "1.9.7",
-    "@types/lodash": "4.17.20",
-    "apisauce": "3.1.0",
+    "apisauce": "3.2.1",
     "base64-js": "1.5.1",
     "buffer": "5.6.0",
     "compare-versions": "6.1.1",
     "crypto-js": "3.3.0",
-    "detox": "20.42.0",
+    "detox": "20.44.0",
     "ed2curve": "0.3.0",
-    "emittery": "1.1.0",
+    "emittery": "1.2.0",
     "events": "3.3.0",
     "expr-eval": "2.0.2",
     "fast-json-stable-stringify": "2.1.0",
@@ -60,43 +60,43 @@
     "immer": "8.0.1",
     "js-sha256": "0.9.0",
     "jsbn": "1.1.0",
-    "libphonenumber-js": "1.12.4",
+    "libphonenumber-js": "1.12.24",
     "lodash": "4.17.21",
     "moment": "2.30.1",
     "promise.any": "2.0.6",
     "prop-types": "15.8.1",
     "qrcode": "1.5.4",
-    "ramda": "0.30.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "ramda": "0.32.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-i18next": "12.1.5",
-    "react-native": "0.77.3",
+    "react-native": "0.82.0",
     "react-native-barcode-mask": "1.2.4",
-    "react-native-blob-util": "0.21.3",
-    "react-native-contacts": "8.0.4",
+    "react-native-blob-util": "0.22.2",
+    "react-native-contacts": "8.0.7",
     "react-native-country-picker-modal": "2.0.0",
-    "react-native-dropdownalert": "5.1.0",
-    "react-native-error-boundary": "1.2.9",
+    "react-native-dropdownalert": "5.2.0",
+    "react-native-error-boundary": "3.0.0",
     "react-native-gesture-handler": "2.28.0",
     "react-native-image-crop-picker": "0.51.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-keychain": "10.0.0",
     "react-native-localize": "2.2.4",
-    "react-native-logs": "5.3.0",
+    "react-native-logs": "5.5.0",
     "react-native-modal-overlay": "1.3.1",
     "react-native-modpow": "1.1.0",
-    "react-native-network-info": "5.2.1",
     "react-native-pager-view": "6.9.1",
     "react-native-phone-number-input": "2.1.0",
-    "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "3.18.0",
+    "react-native-randombytes": "3.6.2",
+    "react-native-reanimated": "4.1.3",
     "react-native-safe-area-context": "5.6.1",
-    "react-native-screens": "4.16.0",
+    "react-native-screens": "4.17.1",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "15.14.0",
     "react-native-tab-view": "4.1.3",
-    "react-native-url-polyfill": "2.0.0",
+    "react-native-url-polyfill": "3.0.0",
     "react-native-vision-camera": "4.7.2",
+    "react-native-worklets": "^0.6.1",
     "react-redux": "9.2.0",
     "redux-mock-store": "1.5.5",
     "redux-persist": "6.0.0",
@@ -114,25 +114,27 @@
     "@babel/runtime": "7.28.4",
     "@faker-js/faker": "9.9.0",
     "@jest/globals": "29.7.0",
-    "@react-native-community/cli": "15.1.3",
-    "@react-native-community/cli-platform-android": "15.1.3",
-    "@react-native-community/cli-platform-ios": "15.1.3",
-    "@react-native/babel-preset": "0.77.3",
-    "@react-native/eslint-config": "0.77.1",
-    "@react-native/metro-config": "0.77.3",
-    "@react-native/typescript-config": "0.77.1",
-    "@rnx-kit/align-deps": "3.0.4",
+    "@react-native-community/cli": "20.0.2",
+    "@react-native-community/cli-platform-android": "20.0.2",
+    "@react-native-community/cli-platform-ios": "20.0.2",
+    "@react-native/babel-preset": "0.82.0",
+    "@react-native/eslint-config": "0.82.0",
+    "@react-native/metro-config": "0.82.0",
+    "@react-native/typescript-config": "0.82.0",
+    "@rnx-kit/align-deps": "^3.2.4",
     "@testing-library/jest-native": "5.4.3",
     "@testing-library/react-native": "11.5.0",
     "@types/crypto-js": "4.2.2",
     "@types/jest": "29.5.14",
     "@types/jsbn": "1.2.33",
+    "@types/lodash": "4.17.20",
     "@types/qrcode": "1.5.5",
-    "@types/ramda": "0.30.2",
-    "@types/react-test-renderer": "18.3.1",
+    "@types/ramda": "0.31.1",
+    "@types/react": "^19.1.1",
+    "@types/react-test-renderer": "^19.1.0",
     "@types/xml2js": "0.4.14",
-    "@typescript-eslint/eslint-plugin": "8.44.0",
-    "@typescript-eslint/parser": "8.44.0",
+    "@typescript-eslint/eslint-plugin": "8.46.1",
+    "@typescript-eslint/parser": "8.46.1",
     "axios": "1.12.2",
     "babel-jest": "29.7.0",
     "babel-plugin-inline-import": "3.0.0",
@@ -140,38 +142,38 @@
     "babel-plugin-transform-remove-console": "6.9.4",
     "enzyme": "3.11.0",
     "eslint": "8.57.1",
-    "eslint-config-prettier": "10.0.2",
+    "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-import-resolver-typescript": "3.10.1",
     "eslint-plugin-babel": "5.3.1",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "28.14.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "fast-text-encoding": "1.0.6",
     "i18next-parser": "3.0.0",
     "jest": "29.7.0",
-    "jetifier": "2.0.0",
+    "jetifier": "^2.0.0",
     "lint-staged": "15.4.3",
     "mock-async-storage": "2.9.0",
-    "msw": "2.7.3",
-    "patch-package": "8.0.0",
+    "msw": "2.11.6",
+    "patch-package": "8.0.1",
     "postinstall-postinstall": "2.1.0",
-    "prettier": "3.5.2",
+    "prettier": "3.6.2",
     "react-native-clean-project": "4.0.3",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.1.1",
     "resolve": "1.22.10",
-    "typescript": "5.0.4"
+    "typescript": "^5.8.3"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "rnx-kit": {
     "kitType": "app",
     "alignDeps": {
       "requirements": [
-        "react-native@0.77"
+        "react-native@0.82"
       ],
       "capabilities": [
         "animation",
