--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -39,11 +39,11 @@
     "@react-native-vector-icons/ionicons": "12.3.0",
     "@react-native-vector-icons/material-design-icons": "12.3.0",
     "@react-native/new-app-screen": "0.82.0",
-    "@react-navigation/drawer": "6.7.2",
-    "@react-navigation/elements": "1.3.31",
-    "@react-navigation/native": "6.1.18",
-    "@react-navigation/native-stack": "6.11.0",
-    "@react-navigation/stack": "6.4.1",
+    "@react-navigation/drawer": "7.5.10",
+    "@react-navigation/elements": "2.6.5",
+    "@react-navigation/native": "7.1.18",
+    "@react-navigation/native-stack": "7.3.28",
+    "@react-navigation/stack": "7.4.10",
     "@reduxjs/toolkit": "1.9.7",
     "apisauce": "3.2.1",
     "base64-js": "1.5.1",
@@ -96,7 +96,7 @@
     "react-native-tab-view": "4.1.3",
     "react-native-url-polyfill": "3.0.0",
     "react-native-vision-camera": "4.7.2",
-    "react-native-worklets": "^0.6.1",
+    "react-native-worklets": "0.6.1",
     "react-redux": "9.2.0",
     "redux-mock-store": "1.5.5",
     "redux-persist": "6.0.0",
